--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
   "jest": {
     "coverageThreshold": {
       "global": {
-        "statements": 100
+        "statements": 80,
+        "branches": 70,
+        "functions": 80,
+        "lines": 80
       }
     },
     "roots": [
