--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
   publish-npmjs:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
