--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sika7/silver-html",
+  "name": "silver-html",
   "version": "0.0.0",
   "description": "this package is provides HTML recursive processing.",
   "main": "dist/index.js",
@@ -21,7 +21,8 @@
   "license": "MIT",
   "repository": "https://github.com/sika7/silver-html",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "scope": "@sika7"
   },
   "engines": {
     "node": ">=12.0.0"
