--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silver-html",
-  "version": "0.0.0",
+  "version": "0.0.1-0",
   "description": "this package is provides HTML recursive processing.",
   "main": "dist/index.js",
   "scripts": {
